fix: button wrapping

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -9,6 +9,7 @@
   cursor: pointer;
   text-decoration: none;
   font-size: 16px;
+  white-space: nowrap;
 
   &[aria-disabled='true'] {
     cursor: default;
